fixed issues with the merge